fixed navbar z-index

--- a/main.css
+++ b/main.css
@@ -160,7 +160,9 @@ textarea{
 .nav{
 position: fixed;
 right: 0;
+z-index: 1;
 }
+/*footer styling*/
 #footer{
     width: 100%;
     height: 5vh;
